# bfv_research

./: README.md
SEAL_demo/bfv_playground.dSYM/Contents/: Info.plist
cpp/SEAL_demo/: CMakeLists.txt  bfv_playground.cpp
cpp/SEAL_demo/bfv_playground.dSYM/Contents/Resources/DWARF/: bfv_playground
cpp/trivial_pr/: CMakeCache.txt  bfv_playground.cpp  cmake_install.cmake  trivial_pr.cpp
cpp/vector_pr/: vector_pr.cpp
rust/trivial_pr/: Cargo.toml
rust/trivial_pr/src/: main.rs  util.rs
rust/vector_pr/: Cargo.toml
rust/vector_pr/src/: main.rs  util.rs
rust_pir/trivial_pr/src/: main.rs
trivial_pr/: CMakeLists.txt  Makefile  trivial_pr
vector_pr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  trivial_pr.cpp  vector_pr
